<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_send_link"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/menu_send_link"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/action_refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_browser"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/action_browser"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_disconnect"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/action_disconnect"
        app:showAsAction="ifRoom" />
</menu>
